# healthcare-support-portal

./: .gitignore  README.md  authorization.polar  docker-compose.yml  docker.compose  init_database.py  pyproject.toml  run_all.sh  setup.sh  stop_all.sh  sync_facts.sh
common/src/common/: __init__.py  db.py  schemas.py
frontend/: package-lock.json  package.json
frontend/app/: routes.ts
frontend/app/components/: Navigation.tsx
frontend/app/components/documents/: DocumentUpload.tsx
frontend/app/routes/: _index.tsx  documents.tsx  login.tsx
frontend/app/styles/: globals.css
scripts/: migrate.sh
services/auth_service/: README.md  pyproject.toml  run.sh
services/auth_service/src/auth_service/: config.py
services/auth_service/src/auth_service/routers/: auth.py  users.py
services/frontend_service/app/components/ui/: badge.tsx
services/frontend_service/app/lib/: api.server.ts
services/frontend_service/app/lib/utils/: action-utils.ts  loader-utils.ts
services/frontend_service/app/routes/: _layout.tsx  chat.tsx  dashboard.tsx  signup.tsx
services/frontend_service/app/routes/patients/: patient.tsx
services/patient_service/: .env.example  README.md  pyproject.toml  run.sh
services/rag_service/: README.md  pyproject.toml  run.sh
services/rag_service/src/rag_service/: main.py
services/rag_service/src/rag_service/routers/: chat.py
services/rag_service/src/rag_service/utils/: embeddings.py
