[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "oso>=0.27.0",
    "sqlalchemy-oso>=0.9.0",
    "pgvector>=0.2.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "common",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_service"]

[tool.uv.sources]
common = { path = "../../common", editable = true }
